# passwordless-rust

./: .gitignore  Cargo.toml  README.md  Rocket.toml
examples/: README.md  server.rs
examples/static/: client-register.js  client-signin.js  debug.js
examples/templates/: index.html.tera
src/: client.rs  lib.rs  models.rs
