[package]
name = "passwordless-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "passwordless_rust"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = {version = "=0.1.0-rc.3", features = ["tera"] }
dotenv = "0.15.0"

[[example]]
name = "server"